feat(benchmarks): run record, registry JSONL, PGMA matrix, codebook paths
- Add benchmarks/ contract (RUN_RECORD.md), registry.jsonl append-only log,
  registry-analysis.md tables, run_matrix.sh + PGMA matrix example.
- Extend Java harness: RunManifest, MemorySampler, HostEnvironmentMetrics,
  BenchmarkRegistry, baselines (PNG/zip), PGMAPipeline integration.
- Store codebooks as codebook_r{r}_d{d}.fc via Codebook.pathForGeometry;
  remove legacy codebook.fc fallback; generic FileUtils iterations javadoc.
- Document in README, CHANGELOG, project-context; clarify run.sh -c wording.

Made-with: Cursor